<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivtyStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationLocatorActivity" >

    <TableLayout
        android:id="@+id/tblLocationLocator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/lblLocationInformation"
                style="@style/TextViewInformationStyle"
                android:layout_weight="1"
                android:text="@string/lblLocationInformation" />
        </TableRow>

        <TableRow
            android:id="@+id/ErrorRowOnLocatorPage"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/lblLocErrorMsgOnLocatorPage"
                style="@style/TextViewErrorStyle"
                android:layout_weight="1"
                android:text="@string/lblError"
                android:textColor="#FF0000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:paddingBottom="5dp" >

            <saavy.brothers.LetsGoo.CustomAutoCompleteTextView
                android:id="@+id/atv_places"
                style="@style/EditTextStyle"
                android:layout_weight="1"
                android:hint="@string/hintMinimumlengthForLocation"
                android:paddingLeft="5sp"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/lblSubLocality"
                style="@style/TextViewInformationStyle"
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:gravity="left"
                android:text="@string/lblSubLocality" />

            <TextView
                android:id="@+id/subLocalitySelected"
                style="@style/TextViewInformationStyle"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:gravity="left" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/lblLocality"
                style="@style/TextViewInformationStyle"
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:gravity="left"
                android:text="@string/lblLocality" />

            <TextView
                android:id="@+id/localitySelected"
                style="@style/TextViewInformationStyle"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:gravity="left"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:paddingLeft="85dp"
            android:paddingRight="85dp"
            android:paddingTop="15dp" >

            <Button
                android:id="@+id/btnLocationOK"
                style="@style/btnDefaultStyle"
                android:layout_weight="1"
                android:text="@string/lblOK"
                android:visibility="visible" />
        </TableRow>
    </TableLayout>

</RelativeLayout>