<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivtyStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TableLayout
        android:id="@+id/tblUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" 
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/lblLoginInformation"
                style="@style/TextViewInformationStyle"
                android:layout_weight="2"
                android:text="@string/lblLoginInformation" />
        </TableRow>

        <TableRow
            android:id="@+id/ErrorRowOnLoginPage"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/lblLoginErrorMsgOnLoginPage"
                style="@style/TextViewErrorStyle"
                android:layout_weight="1"
                android:text="@string/lblError"
                android:textColor="#FF0000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >
            <EditText
                android:id="@+id/txtLogin"
                style="@style/EditTextStyle"
                android:layout_weight="1"
                android:inputType="phone"
                android:maxLength="10" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp" >

            <Button
                android:id="@+id/btnLoginSubmit"
                style="@style/btnDefaultStyle"
                android:layout_weight=".35"
                android:text="@string/btnSubmit" />

            <TextView
                android:id="@+id/dumy"
                android:layout_weight=".3" />

            <Button
                android:id="@+id/btnSingUp"
                style="@style/btnDefaultStyle"
                android:layout_weight=".35"
                android:text="@string/btnSingUp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:paddingLeft="100dp"
            android:paddingTop="30dp" >

            <TextView
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="bottom"
                android:text="@string/lbllogocopyright"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</RelativeLayout>