<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivtyStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".TravelPlanActivity" >

        <TableLayout
            android:id="@+id/tblTravelPlan"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true" >

            <TableRow android:id="@+id/tableRow1" >

                <TextView
                    android:id="@+id/lblTravekPlanInformation"
                    style="@style/TextViewInformationStyle"
                    android:layout_weight="1"
                    android:text="@string/lblTravekPlanInformation" />
            </TableRow>

            <TableRow
                android:id="@+id/ErrorRowOnTravelPlanPage"
                android:paddingTop="5dp"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/lblErrorMsgOnTravelPlanePage"
                    style="@style/TextViewErrorStyle"
                    android:layout_weight="1"
                    android:text="@string/lblError"
                    android:textColor="#FF0000" />
            </TableRow>

            <TableRow android:id="@+id/tableRow2" >

                <Spinner
                    android:id="@+id/ddCurrentLoc"
                    android:layout_weight="1"
                    android:prompt="@string/ddSelLocation"
                    android:spinnerMode="dropdown" />

                <Button
                    android:id="@+id/btnPlusCurLoc"
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/plus_icon" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:paddingRight="25dp"
                android:paddingTop="10dp" >

                <EditText
                    android:id="@+id/txtStartLoc"
                    style="@style/EditTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/lblStartLoc"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:paddingTop="10dp" >

                <Spinner
                    android:id="@+id/ddEndLocation"
                    android:layout_weight="1"
                    android:prompt="@string/ddSelLocation"
                    android:spinnerMode="dropdown" />

                <Button
                    android:id="@+id/btnPlusEndLoc"
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/plus_icon" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:paddingRight="25dp"
                android:paddingTop="10dp" >

                <Spinner
                    android:id="@+id/ddTravelType"
                    android:layout_weight="1"
                    android:prompt="@string/SelTravelType"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:paddingRight="25dp"
                android:paddingTop="10dp" >

                <Spinner
                    android:id="@+id/ddStartTime"
                    android:layout_weight="1"
                    android:prompt="@string/SelStartTime"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:paddingRight="25dp"
                android:paddingTop="10dp" >

                <EditText
                    android:id="@+id/txtNoOfPass"
                    style="@style/EditTextStyle"
                    android:layout_weight="1"
                    android:hint="@string/lblNoOfPassenger"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:paddingLeft="85dp"
                android:paddingRight="85dp"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/btnTravelSubmit"
                    style="@style/btnDefaultStyle"
                    android:layout_weight="1"
                    android:text="@string/btnTravelSubmit" />
            </TableRow>
           
         <!--<TableRow
            android:id="@+id/tableRow15"
            android:paddingLeft="100dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="bottom"
                android:text="@string/lbllogocopyright"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />            
        </TableRow> -->
        </TableLayout>
    </RelativeLayout>

</ScrollView>