<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivtyStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".TravelListActivity" >

        <TableLayout
            android:id="@+id/tblParentTravelDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnNewTravelPlan"
            android:layout_below="@+id/lblTravelErrorMsg"
            android:orientation="horizontal" >
        </TableLayout>

        <Button
            android:id="@+id/btnNewTravelPlan"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:background="#938953"
            android:text="@string/btnNewTravelPlan"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/lblTravelErrorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tblParentTravelDetails"
            android:layout_alignRight="@+id/tblParentTravelDetails"
            android:layout_below="@+id/btnNewTravelPlan"
            android:text="@string/lblError"
            android:textColor="#FF0000"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_above="@+id/lblTravelErrorMsg"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/btnNewTravelPlan"
            android:background="#938953"
            android:text="@string/lblBtnRefresh"
            android:textColor="#000000" />
    </RelativeLayout>

</ScrollView>